# news_fetcher

./: .gitignore  README.md  debug_fetch.py  dev_utils.py  main.py  pyproject.toml
data/cache/: .gitkeep
data/config/: preferences.json  sources.json
data/epubs/: .gitkeep
src/news_fetcher/: __init__.py  config.py  llm_client.py  main.py  opds_server.py  tools.py  utils.py
tests/: run_tests.py
